[package]
name = "defi"
version = "0.0.1"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "=5.7.0", features = ["unit-testing"] }
near-contract-standards = "=5.7.0"

[dev-dependencies]
near-sdk = { version = "=5.7.0", features = ["unit-testing"] }
